# pacman

./: .clang-format  CMakeLists.txt  Makefile  README.md
cmake/: Conan.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
levels/: default.txt
src/: animation.cpp  animation.h  blinky.cpp  blinky.h  clyde.cpp  clyde.h  controller.cpp  controller.h  dot.h  game.cpp  game.h  ghost.cpp  ghost.h  image_loader.cpp  image_loader.h  inky.cpp  inky.h  level.cpp  level.h  main.cpp  memory.h  movement.cpp  movement.h  pacman.cpp  pacman.h  pinky.cpp  pinky.h  renderer.cpp  renderer.h  sprite_graphics.cpp  sprite_graphics.h  spritesheet.cpp  spritesheet.h
